<resources>
    <string name="app_name">享智购功分簿</string>

    <!-- Strings related to login -->
    <string name="prompt_email">账号</string>
    <string name="prompt_password">密码</string>
    <string name="action_sign_in">登录</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>
    <string name="title_activity_bottom_nav">BottomNav</string>
    <string name="title_home">主页</string>
    <string name="title_dashboard">任务</string>
    <string name="title_notifications">审批</string>
    <string name="title_ranking">排名</string>
    <string name="item1">删除</string>
    <string name="item2">添加</string>
    <string name="item3">修改</string>
    <string name="zhuye">主页</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="missionname">任务</string>
</resources>
